--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Lists Lab</title>
+    <title>Grilled Cheese Recipe</title>
   </head>
   <body>
-    <!-- Write your HTML in this file -->
+    <!-- Unordered list of ingredients -->
+    <ul>
+      <li>2 slices of bread</li>
+      <li>
+        4 slices of cheese
+        <ul>
+          <li>cheddar</li>
+          <li>mozzarella</li>
+          <li>pepper jack</li>
+        </ul>
+      </li>
+      <li>1 tbsp of butter</li>
+    </ul>
+
+    <!-- Ordered list of steps -->
+    <ol>
+      <li>Spread butter on bread and frying pan</li>
+      <li>Place bread in frying pan and fry</li>
+      <li>Add cheese on top of bread</li>
+      <li>Cover with second slice of bread</li>
+      <li>Turn over and fry for 2 minutes</li>
+    </ol>
   </body>
 </html>
